src/main/gen/com/bloxbean/algodea/idea/language/parser/TEALParser.java
// This is a generated file. Not intended for manual editing.
package com.bloxbean.algodea.idea.language.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.bloxbean.algodea.idea.language.psi.TEALTypes.*;
import static com.bloxbean.algodea.idea.language.psi.impl.TEALParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class TEALParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return tealFile(b, l + 1);
  }

  /* ********************************************************** */
  // 'assert'
  public static boolean ASSERT_OPCODE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ASSERT_OPCODE")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSERT_OPCODE, "<assert opcode>");
    r = consumeToken(b, "assert");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'dig'
  public static boolean DIG_OPCODE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DIG_OPCODE")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DIG_OPCODE, "<dig opcode>");
    r = consumeToken(b, "dig");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'err' | 'return' | 'pop' | 'dup' | 'dup2' | SWAP_OPCODE | SELECT_OPCODE | ASSERT_OPCODE | digOperation
  //                                 | branchOperation
  public static boolean FlowControlOperation(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FlowControlOperation")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FLOW_CONTROL_OPERATION, "<flow control operation>");
    r = consumeToken(b, "err");
    if (!r) r = consumeToken(b, "return");
    if (!r) r = consumeToken(b, "pop");
    if (!r) r = consumeToken(b, "dup");
    if (!r) r = consumeToken(b, "dup2");
    if (!r) r = SWAP_OPCODE(b, l + 1);
    if (!r) r = SELECT_OPCODE(b, l + 1);
    if (!r) r = ASSERT_OPCODE(b, l + 1);
    if (!r) r = digOperation(b, l + 1);
    if (!r) r = branchOperation(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // GETBIT
  public static boolean GETBIT_OPCODE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GETBIT_OPCODE")) return false;
    if (!nextTokenIs(b, GETBIT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, GETBIT);
    exit_section_(b, m, GETBIT_OPCODE, r);
    return r;
  }

  /* ********************************************************** */
  // GETBYTE
  public static boolean GETBYTE_OPCODE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GETBYTE_OPCODE")) return false;
    if (!nextTokenIs(b, GETBYTE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, GETBYTE);
    exit_section_(b, m, GETBYTE_OPCODE, r);
    return r;
  }

  /* ********************************************************** */
  // 'gtxna'
  public static boolean GTXNA_OPCODE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GTXNA_OPCODE")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, GTXNA_OPCODE, "<gtxna opcode>");
    r = consumeToken(b, "gtxna");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'gtxnsa'
  public static boolean GTXNSA_OPCODE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GTXNSA_OPCODE")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, GTXNSA_OPCODE, "<gtxnsa opcode>");
    r = consumeToken(b, "gtxnsa");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'gtxns'
  public static boolean GTXNS_OPCODE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GTXNS_OPCODE")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, GTXNS_OPCODE, "<gtxns opcode>");
    r = consumeToken(b, "gtxns");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'gtxn'
  public static boolean GTXN_OPCODE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GTXN_OPCODE")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, GTXN_OPCODE, "<gtxn opcode>");
    r = consumeToken(b, "gtxn");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // SHA256
  //                                      | KECCAK256
  //                                      | SHA512_256
  //                                      | ED25519VERIFY
  //                                      | PLUS
  //                                      | MINUS
  //                                      | DIVIDE
  //                                      | TIMES
  //                                      | LESSTHAN
  //                                      | GREATERTHAN
  //                                      | LESSTHANEQUAL
  //                                      | GREATERTHANEQUAL
  //                                      | LOGICAL_AND
  //                                      | LOGICAL_OR
  //                                      | LOGICAL_EQUAL
  //                                      | LOGICAL_NOTEQUAL
  //                                      | NOT
  //                                      | LEN
  //                                      | ITOB
  //                                      | BTOI
  //                                      | MODULO
  //                                      | BITWISE_OR
  //                                      | BITWISE_AND
  //                                      | BITWISE_XOR
  //                                      | BITWISE_INVERT
  //                                      | MULW
  //                                      | ADDW
  //                                      | GETBIT_OPCODE
  //                                      | SETBIT_OPCODE
  //                                      | GETBYTE_OPCODE
  //                                      | SETBYTE_OPCODE
  //                                      | CONCAT
  //                                      | substringOperation
  //                                      | SUBSTRING3
  public static boolean GeneralOperation(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GeneralOperation")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, GENERAL_OPERATION, "<general operation>");
    r = consumeToken(b, SHA256);
    if (!r) r = consumeToken(b, KECCAK256);
    if (!r) r = consumeToken(b, SHA512_256);
    if (!r) r = consumeToken(b, ED25519VERIFY);
    if (!r) r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    if (!r) r = consumeToken(b, DIVIDE);
    if (!r) r = consumeToken(b, TIMES);
    if (!r) r = consumeToken(b, LESSTHAN);
    if (!r) r = consumeToken(b, GREATERTHAN);
    if (!r) r = consumeToken(b, LESSTHANEQUAL);
    if (!r) r = consumeToken(b, GREATERTHANEQUAL);
    if (!r) r = consumeToken(b, LOGICAL_AND);
    if (!r) r = consumeToken(b, LOGICAL_OR);
    if (!r) r = consumeToken(b, LOGICAL_EQUAL);
    if (!r) r = consumeToken(b, LOGICAL_NOTEQUAL);
    if (!r) r = consumeToken(b, NOT);
    if (!r) r = consumeToken(b, LEN);
    if (!r) r = consumeToken(b, ITOB);
    if (!r) r = consumeToken(b, BTOI);
    if (!r) r = consumeToken(b, MODULO);
    if (!r) r = consumeToken(b, BITWISE_OR);
    if (!r) r = consumeToken(b, BITWISE_AND);
    if (!r) r = consumeToken(b, BITWISE_XOR);
    if (!r) r = consumeToken(b, BITWISE_INVERT);
    if (!r) r = consumeToken(b, MULW);
    if (!r) r = consumeToken(b, ADDW);
    if (!r) r = GETBIT_OPCODE(b, l + 1);
    if (!r) r = SETBIT_OPCODE(b, l + 1);
    if (!r) r = GETBYTE_OPCODE(b, l + 1);
    if (!r) r = SETBYTE_OPCODE(b, l + 1);
    if (!r) r = consumeToken(b, CONCAT);
    if (!r) r = substringOperation(b, l + 1);
    if (!r) r = consumeToken(b, SUBSTRING3);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // intcblockOperation
  //                                   | intcOperation
  //                                   | 'intc_0'
  //                                   | 'intc_1'
  //                                   | 'intc_2'
  //                                   | 'intc_3'
  //                                   | bytecblockOperation
  //                                   | bytecOperation
  //                                   | 'bytec_0'
  //                                   | 'bytec_1'
  //                                   | 'bytec_2'
  //                                   | 'bytec_3'
  //                                   | argOperation
  //                                   | 'arg_0'
  //                                   | 'arg_1'
  //                                   | 'arg_2'
  //                                   | 'arg_3'
  //                                   | globalOperation
  //                                   | loadOperation
  //                                   | storeOperation
  //                                   | txnLoadingOperation
  //                                   | gtxnLoadingOperation
  //                                   | txnaLoadingOperation
  //                                   | gtxnaLoadingOperation
  //                                   | pushIntOperation
  //                                   | pushBytesOperation
  //                                   | gtxnsLoadingOperation
  //                                   | gtxnsaLoadingOperation
  public static boolean LoadingOperation(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "LoadingOperation")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, LOADING_OPERATION, "<loading operation>");
    r = intcblockOperation(b, l + 1);
    if (!r) r = intcOperation(b, l + 1);
    if (!r) r = consumeToken(b, "intc_0");
    if (!r) r = consumeToken(b, "intc_1");
    if (!r) r = consumeToken(b, "intc_2");
    if (!r) r = consumeToken(b, "intc_3");
    if (!r) r = bytecblockOperation(b, l + 1);
    if (!r) r = bytecOperation(b, l + 1);
    if (!r) r = consumeToken(b, "bytec_0");
    if (!r) r = consumeToken(b, "bytec_1");
    if (!r) r = consumeToken(b, "bytec_2");
    if (!r) r = consumeToken(b, "bytec_3");
    if (!r) r = argOperation(b, l + 1);
    if (!r) r = consumeToken(b, "arg_0");
    if (!r) r = consumeToken(b, "arg_1");
    if (!r) r = consumeToken(b, "arg_2");
    if (!r) r = consumeToken(b, "arg_3");
    if (!r) r = globalOperation(b, l + 1);
    if (!r) r = loadOperation(b, l + 1);
    if (!r) r = storeOperation(b, l + 1);
    if (!r) r = txnLoadingOperation(b, l + 1);
    if (!r) r = gtxnLoadingOperation(b, l + 1);
    if (!r) r = txnaLoadingOperation(b, l + 1);
    if (!r) r = gtxnaLoadingOperation(b, l + 1);
    if (!r) r = pushIntOperation(b, l + 1);
    if (!r) r = pushBytesOperation(b, l + 1);
    if (!r) r = gtxnsLoadingOperation(b, l + 1);
    if (!r) r = gtxnsaLoadingOperation(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'min_balance'
  public static boolean MIN_BALANCE_OPCODE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MIN_BALANCE_OPCODE")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, MIN_BALANCE_OPCODE, "<min balance opcode>");
    r = consumeToken(b, "min_balance");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'pushbytes'
  public static boolean PUSH_BYTE_OPCODE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "PUSH_BYTE_OPCODE")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, PUSH_BYTE_OPCODE, "<push byte opcode>");
    r = consumeToken(b, "pushbytes");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'pushint'
  public static boolean PUSH_INT_OPCODE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "PUSH_INT_OPCODE")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, PUSH_INT_OPCODE, "<push int opcode>");
    r = consumeToken(b, "pushint");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'select'
  public static boolean SELECT_OPCODE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "SELECT_OPCODE")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, SELECT_OPCODE, "<select opcode>");
    r = consumeToken(b, "select");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // SETBIT
  public static boolean SETBIT_OPCODE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "SETBIT_OPCODE")) return false;
    if (!nextTokenIs(b, SETBIT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SETBIT);
    exit_section_(b, m, SETBIT_OPCODE, r);
    return r;
  }

  /* ********************************************************** */
  // SETBYTE
  public static boolean SETBYTE_OPCODE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "SETBYTE_OPCODE")) return false;
    if (!nextTokenIs(b, SETBYTE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SETBYTE);
    exit_section_(b, m, SETBYTE_OPCODE, r);
    return r;
  }

  /* ********************************************************** */
  // 'swap'
  public static boolean SWAP_OPCODE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "SWAP_OPCODE")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, SWAP_OPCODE, "<swap opcode>");
    r = consumeToken(b, "swap");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'balance' | 'app_opted_in' | 'app_local_get'| 'app_local_get_ex' | 'app_global_get'
  //                             | 'app_global_get_ex'| 'app_local_put'| 'app_global_put'| 'app_local_del'
  //                             | 'app_global_del'
  //                             | assetHoldingGetOperation
  //                             | assetParamsGetOperation
  //                             | MIN_BALANCE_OPCODE
  public static boolean StateAccessOperation(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "StateAccessOperation")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, STATE_ACCESS_OPERATION, "<state access operation>");
    r = consumeToken(b, "balance");
    if (!r) r = consumeToken(b, "app_opted_in");
    if (!r) r = consumeToken(b, "app_local_get");
    if (!r) r = consumeToken(b, "app_local_get_ex");
    if (!r) r = consumeToken(b, "app_global_get");
    if (!r) r = consumeToken(b, "app_global_get_ex");
    if (!r) r = consumeToken(b, "app_local_put");
    if (!r) r = consumeToken(b, "app_global_put");
    if (!r) r = consumeToken(b, "app_local_del");
    if (!r) r = consumeToken(b, "app_global_del");
    if (!r) r = assetHoldingGetOperation(b, l + 1);
    if (!r) r = assetParamsGetOperation(b, l + 1);
    if (!r) r = MIN_BALANCE_OPCODE(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'txna'
  public static boolean TXNA_OPCODE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "TXNA_OPCODE")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, TXNA_OPCODE, "<txna opcode>");
    r = consumeToken(b, "txna");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'txn'
  public static boolean TXN_OPCODE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "TXN_OPCODE")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, TXN_OPCODE, "<txn opcode>");
    r = consumeToken(b, "txn");
    exit_section_(b, l, m, r, false, null);
    return r;
  }
